3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

server/player.c: Clear op->chosen_skill when we get to the play_again
   prompt.  Otherwise, the server may try to use this later on, and it
   no longer points to a valid object, so it results in a crash.
   MSW 2001-04-19

server/skill_util.c: Add missing call to out_of_map in skill_attack which
  could result in crashes if player is at edge of maps and decides to attack
  in direction off map.  MSW 2001-04-18

server/attack.c: Remove error message about golem without owners,
   also add better checking before clering the op->contr->golem field.
common/map.c: set status flag on maps to MAP_SAVING so remove_ob does
   not do extra work when we are deleting a map (ie, immediate reset)
   from emory.
server/skills.c: If someone is stolen from a player, send an esrv_delete_item
   to the client so the clients inventory remains correct.
MSW 2001-04-16

common/re-cmp.c: Modify re_cmp functiion so that it properly matches
  strings not at the start 'ie, dude chain will now match against
  the chain value'. 
server/monster.c: Properly alter direction monster moves if they are
  feared or confused.  It was properly altering direction when monsters
  were using range attacks, but not if they were just wanting to move.
MSW 2001-04-12

common/living.c: Don't use the last_heal object in experience objects as 
   sp regen penalty.  This should fix the problem of inconsistent sp regen
   rates - last_heal is used in experience objects if the permanent experience
   option is turned on.  MSW 2001-04-11

PeterM:  
server/spell_util.c:  fix peace so it gives experience